# qadam-backend

./: .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
docker/: Caddyfile  Dockerfile.dev  Dockerfile.prod
docs/: architecture.md  auth-flow.md  cicd.md  deployment.md  learning-flow.md
docs/superpowers/specs/: 2026-04-27-qadam-backend-foundation-design.md  2026-04-28-qadam-learning-module-design.md
src/apps/accounts/: admin.py  admin_urls.py  admin_views.py  apps.py  forms.py  managers.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
src/apps/accounts/migrations/: 0001_initial.py
src/apps/accounts/services/: jwt.py  login.py  otp.py  password_reset.py  registration.py  verification_token.py
src/apps/ai_tutor/: admin.py  apps.py  models.py
src/apps/ai_tutor/migrations/: 0001_initial.py
src/apps/common/: exceptions.py  health_urls.py  health_views.py  models.py
src/apps/crm/: admin.py  apps.py  models.py
src/apps/crm/migrations/: 0001_initial.py
src/apps/gamification/: admin.py  apps.py  models.py  translation.py
src/apps/gamification/migrations/: 0001_initial.py
src/apps/learning/: access.py  admin.py  apps.py  models.py  selectors.py  serializers.py  translation.py  urls.py  views.py
src/apps/learning/management/commands/: seed_learning.py
src/apps/learning/migrations/: 0001_initial.py  0002_quizattempt_answers_quizattempt_correct_count_and_more.py
src/apps/learning/services/: progress.py  quiz.py
src/apps/notifications/: admin.py  apps.py  models.py  translation.py
src/apps/notifications/migrations/: 0001_initial.py
src/apps/payments/: admin.py  apps.py  models.py  services.py  translation.py
src/apps/payments/migrations/: 0001_initial.py
src/apps/profiles/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/apps/profiles/migrations/: 0001_initial.py
src/apps/testing/: admin.py  apps.py  models.py
src/apps/testing/migrations/: 0001_initial.py
src/apps/universities/: admin.py  apps.py  models.py  translation.py
src/apps/universities/migrations/: 0001_initial.py
src/config/: asgi.py  celery.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py
src/services/sms/: __init__.py  base.py  console.py  factory.py  whatsapp.py
src/tests/: conftest.py  factories.py  test_smoke.py  test_sms_provider.py
src/tests/accounts/: test_login.py  test_otp.py  test_rbac.py  test_registration.py  test_validators.py
src/tests/learning/: test_access.py  test_dashboard.py  test_lessons_api.py  test_quiz_api.py  test_quiz_service.py  test_subjects_api.py
src/tests/profiles/: test_profile_api.py
